@@ -45,6 +45,17 @@ Connection.prototype.start = function() {
   // Create new connection instance
   // this.connection = net.createConnection(this.socketOptions.port, this.socketOptions.host);  
   this.connection = new net.Socket();
+  // Set options on the socket
+  this.connection.setTimeout(this.socketOptions.timeout);
+  this.connection.setNoDelay(this.socketOptions.noDelay);
+  // Set keep alive if defined
+  if(this.socketOptions.keepAlive > 0) {
+    this.connection.setKeepAlive(true, this.socketOptions.keepAlive);
+  } else {
+    this.connection.setKeepAlive(false);
+  }   
+  
+  // Add handlers
   this.connection.on("error", errorHandler(this));
   // Add all handlers to the socket to manage it
   this.connection.on("connect", connectHandler(this));
@@ -108,18 +119,7 @@ var resetHandlers = function(self, clearListeners) {
 
 // Connect handler
 var connectHandler = function(self) {
-  return function() {
-    // Set options on the socket
-    // this.setEncoding(self.socketOptions.encoding);
-    this.setTimeout(self.socketOptions.timeout);
-    this.setNoDelay(self.socketOptions.noDelay);
-    // Set keep alive if defined
-    if(self.socketOptions.keepAlive > 0) {
-      this.setKeepAlive(true, self.socketOptions.keepAlive);
-    } else {
-      this.setKeepAlive(false);
-    }   
-    
+  return function() {    
     // Set connected
     self.connected = true;
     // Emit the connect event with no error
@@ -288,7 +288,7 @@ var endHandler = function(self) {
   }
 }
 
-var timeoutHandler = function(self) {
+var timeoutHandler = function(self) {  
   return function() {
     self.emit("error", {err: 'connection to [' + self.socketOptions.host + ':' + self.socketOptions.port + '] timed out'}, self);      
   }
