@@ -97,7 +97,7 @@ var connectHandler = function(self) {
     if(Object.keys(self.waitingToOpen).length == 0 && performedOperation) {
       // If we have any errors notify the application, only fire if we don't have the element already in
       // errors
-      if(Object.keys(self.connectionsWithErrors).length > 0 && fireError) {
+      if(Object.keys(self.connectionsWithErrors).length > 0 && Object.keys(self.openConnections).length == 0 && fireError) {
         // Set pool type to disconnected
         self._poolState = 'disconnected';  
         // Emit error
