@@ -215,6 +215,8 @@ Server.prototype.connect = function(dbInstance, options, callback) {
     if(server._serverState === 'connecting' && firstCall) {
       // Set server state to connected
       server._serverState = 'disconnected';
+      // Shut down the pool
+      connectionPool.stop();
       // Only do a callback if we have a valid callback function, on retries this might not be true
       if(typeof callback === 'function') callback(new Error(message && message.err ? message.err : message));
     } else {
