@@ -18,6 +18,8 @@
 	* keepAlive = Set if keepAlive is used (default 0, which means no keepAlive, set higher than 0 for keepAlive)
 	* encoding = ['ascii', 'utf8', or 'base64'] (default null)
 * Fixes for handling of errors during shutdown off a socket connection
+* Correctly applies socket options including timeout
+* Cleanup of test management code to close connections correctly
 
 0.9.7 2011-11-10
 * Added priority setting to replicaset manager
